# pisharp-piwebapi-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  mkdocs.yml  pyproject.toml
.claude/commands/: meet.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: codegen.md  getting-started.md  index.md
docs/api/: batch.md  client.md  elements.md  eventframes.md  exceptions.md  models.md  pagination.md  points.md  servers.md  streams.md
examples/: async_usage.py  basic_auth.py  batch_requests.py  browse_af_hierarchy.py  event_frames.py  pandas_analysis.py  read_current_values.py  write_values.py
src/pisharp_piwebapi/: __init__.py  _pandas.py  analyses.py  analysisrules.py  analysistemplates.py  attributes.py  attributetemplates.py  attributetraits.py  auth.py  batch.py  calculation.py  categories.py  client.py  elements.py  elementtemplates.py  enumerationsets.py  enumerationvalues.py  eventframes.py  exceptions.py  models.py  notificationrules.py  notificationruletemplates.py  pagination.py  points.py  search.py  securityidentities.py  securitymappings.py  servers.py  streamsets.py  system.py  tables.py  timerules.py  unitclasses.py  (+1 more)
tests/: conftest.py  test_analyses.py  test_analysisrules.py  test_analysistemplates.py  test_attributes.py  test_attributetemplates.py  test_attributetraits.py  test_auth.py  test_batch.py  test_calculation.py  test_categories.py  test_client.py  test_client_async.py  test_client_sync.py  test_coverage_gaps.py  test_elements.py  test_elements_async.py  test_elements_sync.py  test_elementtemplates.py  test_enumerationsets.py  test_enumerationvalues.py  test_eventframes_async.py  test_eventframes_sync.py  test_exceptions.py  test_generated.py  test_models.py  test_models_extended.py  test_notificationrules.py  test_notificationruletemplates.py  test_pagination.py  test_pandas.py  test_points.py  test_search.py  test_securityidentities.py  test_securitymappings.py  test_servers_async.py  test_servers_sync.py  test_streamsets.py  test_system.py  test_tables.py  (+3 more)
(+31 files in other folders)
