[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pisharp-piwebapi"
version = "0.1.0"
description = "A modern Python SDK for PI Web API — async/sync, fully typed, Pydantic v2 models."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "PiSharp", email = "hello@pisharp.com" },
]
keywords = ["pi-web-api", "osisoft", "aveva", "pi-system", "industrial-data", "iot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
kerberos = ["httpx-gssapi>=0.3"]
pandas = ["pandas>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "respx>=0.22",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.urls]
Homepage = "https://pisharp.com/developer-hub"
Documentation = "https://pisharp.com/developer-hub/pi-web-api/sdk"
Repository = "https://github.com/Vedteq/pisharp-piwebapi-python"
Issues = "https://github.com/Vedteq/pisharp-piwebapi-python/issues"
Changelog = "https://github.com/Vedteq/pisharp-piwebapi-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pisharp_piwebapi"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
